unpackaged/objects/copado__Scratch_Org_Project_Template__c.object
<CustomObject>
	<fields>
		<fullName>copado__Api_Version__c</fullName>
		<label>Api Version</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>44.0</fullName>
				</value>
				<value>
					<fullName>43.0</fullName>
				</value>
				<value>
					<fullName>42.0</fullName>
				</value>
				<value>
					<fullName>41.0</fullName>
				</value>
				<value>
					<fullName>40.0</fullName>
				</value>
				<value>
					<fullName>39.0</fullName>
				</value>
				<value>
					<fullName>38.0</fullName>
				</value>
				<value>
					<fullName>37.0</fullName>
				</value>
				<value>
					<fullName>36.0</fullName>
				</value>
				<value>
					<fullName>35.0</fullName>
				</value>
				<value>
					<fullName>34.0</fullName>
				</value>
				<value>
					<fullName>33.0</fullName>
				</value>
				<value>
					<fullName>32.0</fullName>
				</value>
				<value>
					<fullName>31.0</fullName>
				</value>
				<value>
					<fullName>30.0</fullName>
				</value>
				<value>
					<fullName>29.0</fullName>
				</value>
				<value>
					<fullName>28.0</fullName>
				</value>
				<value>
					<fullName>27.0</fullName>
				</value>
				<value>
					<fullName>26.0</fullName>
				</value>
				<value>
					<fullName>25.0</fullName>
				</value>
				<value>
					<fullName>24.0</fullName>
				</value>
				<value>
					<fullName>23.0</fullName>
				</value>
				<value>
					<fullName>22.0</fullName>
				</value>
				<value>
					<fullName>21.0</fullName>
				</value>
				<value>
					<fullName>20.0</fullName>
				</value>
				<value>
					<fullName>45.0</fullName>
					<default>true</default>
					<label>45.0</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Developer_Hub_Org__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Developer Hub Credential</label>
		<lookupFilter>
			<active>true</active>
			<filterItems>
				<field>copado__Org__c.copado__is_Developer_Hub_Org__c</field>
				<operation>equals</operation>
				<value>True</value>
			</filterItems>
			<infoMessage>Only developer hub credentials can be selected</infoMessage>
			<isOptional>false</isOptional>
		</lookupFilter>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipLabel>Scratch Org Project Templates (Developer Hub Org)</relationshipLabel>
		<relationshipName>Scratch_Org_Artifacts_Templates</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Namespace__c</fullName>
		<label>Namespace</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Project_JSON__c</fullName>
		<label>Project JSON</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__SFDC_Login_Url__c</fullName>
		<defaultValue>&apos;https://login.salesforce.com&apos;</defaultValue>
		<label>SFDC Login Url</label>
		<type>Url</type>
	</fields>
	<fields>
		<fullName>copado__Source_Metadata_Type__c</fullName>
		<label>Source Metadata Type</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>artifact</fullName>
					<label>Git Artifacts</label>
				</value>
				<value>
					<fullName>unlockPackage</fullName>
					<label>Unlocked Packages</label>
				</value>
				<value>
					<fullName>secondGenerationPackage</fullName>
					<label>Second-Generation Packages</label>
				</value>
				<value>
					<fullName>artifactUMP</fullName>
					<label>Unmanaged Packages</label>
				</value>
				<value>
					<fullName>patch</fullName>
					<label>Patch a Release (Beta)</label>
				</value>
				<value>
					<fullName>Branch</fullName>
				</value>
				<value>
					<fullName>Metadata</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Source_Org_Credential__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Source Credential</label>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipLabel>Scratch Org Project Templates (Source Credential)</relationshipLabel>
		<relationshipName>Scratch_Org_Project_Templates</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Scratch Org Project Template</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Developer_Hub_Org__c</columns>
		<columns>copado__Source_Org_Credential__c</columns>
		<columns>copado__Api_Version__c</columns>
		<columns>copado__SFDC_Login_Url__c</columns>
		<columns>copado__Namespace__c</columns>
		<columns>copado__Project_JSON__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Scratch Org Artifacts Template Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Scratch Org Project Templates</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>